# plover-search-translation

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
plover_search_translation/: commands.py  communicate.py  connection_constants.py  dictionary.py  engine.py  gui.py  lib.py  manager.py  process.py  search_translation_dialog.ui
plover_search_translation/scripts/: add_to_dict.py
