[metadata]
name = plover-search-translation
version = 0.0.1
author = user202729
description = Dictionary plugin for Plover.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev8
  PyQt5>=5.15.4
  subprocess-connection>=0.0.0
packages =
  plover_search_translation

[options.entry_points]
plover.dictionary =
  jst = plover_search_translation.dictionary:Dictionary
plover.extension =
  plover_search_translation = plover_search_translation.manager:Manager
plover.command =
  plover_search_translation_show_dialog = plover_search_translation.commands:show_search_dialog
