[metadata]
name = plover-search-translation
version = 0.7.0
author = user202729
description = Dictionary plugin for Plover.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=5.0.0
  subprocess-connection>=0.0.5
  fuzzywuzzy>=0.18.0
packages =
  plover_search_translation
  plover_search_translation.scripts

[options.extras_require]
gui = PySide6-Essentials==6.9.0

[options.entry_points]
console_scripts =
  plover-search-translation-add-to-dict = plover_search_translation.scripts.add_to_dict:main

plover.dictionary =
  jst = plover_search_translation.dictionary:Dictionary
plover.extension =
  plover_search_translation = plover_search_translation.manager:Manager
plover.command =
  plover_search_translation_open_dialog = plover_search_translation.commands:open_dialog
  plover_search_translation_close_dialog = plover_search_translation.commands:close_dialog
  plover_search_translation_resend_last = plover_search_translation.commands:resend_last
